--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "body-parse": "^0.1.0",
+    "express": "^4.17.2",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
