regisztráció, bejelentkezés, kijelentkezés

--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -12,9 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parse": "^0.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
+    "mysql": "^2.18.1",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "unit": "^1.4.3-0",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
