--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
